// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar Avatar shapes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      className="css-ptimel-Stack"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          circular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-1r1ti4e-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-xcq3z3-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-15ovkbu-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-kkc484-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-1qs0yug-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-12yeqrl-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-ptimel-Stack"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          regular
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-7fqm04-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-xcq3z3-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-1gdybhw-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-1h8xbtq-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-1qs0yug-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-ns34h3-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      className="css-ptimel-Stack"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          rounded
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-7fqm04-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-xcq3z3-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-1gdybhw-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-1h8xbtq-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-1qs0yug-Icon"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="css-ns34h3-Avatar"
        >
          
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-lhv1r1-Icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with icon 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1r1ti4e-Avatar"
      >
        
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-xcq3z3-Icon"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-15ovkbu-Avatar"
      >
        
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-lhv1r1-Icon"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-kkc484-Avatar"
      >
        
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-1qs0yug-Icon"
          />
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12yeqrl-Avatar"
      >
        
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-lhv1r1-Icon"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with letter 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1r1ti4e-Avatar"
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-15ovkbu-Avatar"
      >
        
        CZ
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-kkc484-Avatar"
      >
        
        GR
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12yeqrl-Avatar"
      >
        
        G
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with src 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-v4tpzl-Avatar"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-1vennfp-Avatar"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-tl7s7l-Avatar"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12yeqrl-Avatar"
      >
        <img
          src="https://material-ui.com/static/images/avatar/1.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
